# zoopicasso

./: .coverage  .dockerignore  .env  .gitignore  DOCKER.md  Dockerfile  Facturas.bat  IMPRESION_FIX_ANALYSIS.md  MANUAL_USUARIO.md  README.md  docker-compose.yml  main.py  poll_and_print.py  pyproject.toml  render.yaml  requirements-web.txt  requirements.txt  test_manual.py
core/: domain.py
generar_para_email/: .coverage  .env  DEVELOPERS.md  LOGGING.md  POLL_AND_PRINT_README.md  PRINTER_AGENT_QUICKSTART.md  README.md  TESTING.md  install_local_agent.bat  install_local_agent.sh  main.py  poll_and_print.py  pyproject.toml  pytest.ini  requirements.txt  test_printer_agent.py
generar_para_email/core/: sinks.py
generar_para_email/data/: contador_facturas.json  tickets.xlsx
generar_para_email/deploy/: install_vps.sh
generar_para_email/docs/: CIERRES_ARCHITECTURE.md  CIERRES_AUTOMÁTICOS_RUTAS_CLIENTE.md  CIERRES_BUGS_FIXED.md  CIERRES_INDEX.md  CIERRES_MAINTENANCE.md  MANUAL_CIERRES_CLIENTA.md  README.md  generate_pdf.py
generar_para_email/src/: backup.py  factura_counter.py  factura_model.py  factura_writer.py  monthly_closure.py  printer.py  settings.py  ventas_store.py
generar_para_email/tests/: E2E_README.md  conftest.py  test_factura_counter_real.py  test_factura_model.py  test_factura_writer_real.py  test_integration.py  test_monthly_closure.py  test_ventas_store.py  test_web_app.py
generar_para_email/tests/e2e/: README_PLAYWRIGHT.md  SELECTORS_AND_BEST_PRACTICES.md  TESTS_SUMMARY.md  __init__.py  conftest.py  conftest_e2e.py  conftest_playwright.py  money_pipeline_spec.py  run_e2e_tests.py  test_cierres.py  test_edge_cases.py  test_edge_cases_recovery.py  test_excel_verification.py  test_invoice_generation_flow.py  (+3 more)
generar_para_email/tickets_src/: excel_writer.py
generar_para_email/web/: app.py  scheduler.py
migracion/: main.py  poll_and_print.py  pyproject.toml  render.yaml  requirements.txt
migracion/core/: sinks.py
migracion/src/: backup.py
migracion/tests/: test_web_app.py
migracion/tickets_src/: excel_writer.py
migracion/web/: app.py
(+54 files in other folders)
