[project]
name = "facturas-gisselle"
version = "1.0.0"
description = "Generador de facturas para Gisselle Marin Tabares"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.84.0",
    "openpyxl>=3.1.5",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
    "itsdangerous>=2.2.0",
]
